# squiggle

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
squiggle/: main.py
squiggle/polynomials/: __init__.py  chebyshev.py  polyutils.py
tests/: test_chebyshev.py  test_jax.py
